greatThan, lessThan 적용 / 세번째 화면 완성 / static 메서드 활용

--- a/CodeBaseUI_Layout/Base.lproj/Main.storyboard
+++ b/CodeBaseUI_Layout/Base.lproj/Main.storyboard
@@ -64,6 +64,36 @@
             </objects>
             <point key="canvasLocation" x="950.38167938931292" y="3.5211267605633805"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="APn-lC-TCP">
+            <objects>
+                <viewController id="xfn-aj-kGM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="V3Z-jb-ulC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdA-Uz-rBx">
+                                <rect key="frame" x="100" y="159" width="93" height="559"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="vkl-94-k87"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mdA-Uz-rBx" firstAttribute="top" secondItem="vkl-94-k87" secondAttribute="top" constant="100" id="D7B-uE-Bad"/>
+                            <constraint firstItem="mdA-Uz-rBx" firstAttribute="leading" secondItem="vkl-94-k87" secondAttribute="leading" constant="100" id="RER-Ch-D0D"/>
+                            <constraint firstItem="vkl-94-k87" firstAttribute="bottom" secondItem="mdA-Uz-rBx" secondAttribute="bottom" constant="100" id="Upw-Nc-yOQ"/>
+                            <constraint firstItem="vkl-94-k87" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="mdA-Uz-rBx" secondAttribute="trailing" constant="200" id="eMH-pI-CGg"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vc4-TF-ck4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1797.709923664122" y="15.492957746478874"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="leF-rS-b7k">
             <objects>
